--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,7 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
-  "private": true,
   "scripts": {
-    "lint": "eslint .",
     "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
@@ -11,11 +9,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.3"
+    "firebase-admin": "~7.0.0",
+    "firebase-functions": "^2.2.0"
   },
-  "devDependencies": {
-    "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
-  }
+  "private": true
 }
