tercer intento de deploy

--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "not op_mini all"
   ],
 
-  "homepage": "https://myusername.github.io/burguer-queen"
+  "homepage": "https://anagalvezsalas11.github.io/SCL007-BurgerQueen/"
 }
