--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "gh-pages": "^2.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "homepage": "https://anagalvezsalas11.github.io/SCL007-BurgerQueen/"
+
   },
   "scripts": {
     "start": "react-scripts start",
@@ -14,8 +16,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-     "deploy": "gh-pages -d build"
+     "deploy": "gh-pages -b master -d build"
   },
+  
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -26,5 +29,4 @@
     "not op_mini all"
   ],
 
-  "homepage": "https://anagalvezsalas11.github.io/SCL007-BurgerQueen/"
 }
