--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "firebase": "^5.9.1",
     "gh-pages": "^2.0.1",
-    "homepage": "https://anagalvezsalas11.github.io/SCL007-BurgerQueen/",
+    "homepage": "https://github.com/AnaGalvezSalas11/SCL007-BurgerQueen",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "^2.1.8"
@@ -26,5 +26,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2"
+  }
 }
