--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "burguer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://anagalvezsalas11.github.io/SCL007-BurgerQueen/",
   "dependencies": {
     "firebase": "^5.9.1",
     "gh-pages": "^2.0.1",
-    "homepage": "https://anagalvezsalas11.github.io/SCL007-BurgerQueen/",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "^2.1.8"
@@ -16,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
